# libredfish

./: .bintray.json  .travis.yml  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  Doxyfile  FindReadline.cmake  LICENSE.md  README.md  libredfish.pc.in  package-bin.yaml  package-dev.yaml  release.sh  renamedeb.sh  setup.py  travisWinBuild.sh
.github/workflows/: build.yml  cmake.yml  pull.yml  release.yml
bindings/java/: RedfishAuth.java  RedfishAuthType.java  RedfishPayload.java  RedfishService.java
bindings/python/: pyredfish.c  setup.py
debian/: changelog  control  copyright  docs
docs/: index.html
docs/html/: annotated.html  asyncEvent_8h.html  asyncEvent_8h_source.html  classes.html  debug_8h.html  debug_8h_source.html  deprecated.html  dir_4563ce166fd24a17a0623db1f3455956.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d691984d1d74be3b164cee16192654be.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  index.html  internal__service_8h.html  internal__service_8h_source.html  menudata.js  pages.html  queue_8h.html  queue_8h_source.html  redfishEvent_8h.html  redfishEvent_8h_source.html  redfishPayload_8h.html  redfishPayload_8h_source.html  redfishRawAsync_8h.html  redfishRawAsync_8h_source.html  redfishService_8h.html  redfishService_8h_source.html  redfish_8h.html  redfish_8h_source.html  redpath_8h.html  redpath_8h_source.html  (+56 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  (+40 more)
docs/latex/: annotated.tex  asyncEvent_8h.tex  debug_8h.tex  deprecated.tex  dir_4563ce166fd24a17a0623db1f3455956.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  dir_d691984d1d74be3b164cee16192654be.tex  files.tex  internal__service_8h.tex  queue_8h.tex  redfishEvent_8h.tex  redfishPayload_8h.tex  redfishRawAsync_8h.tex  redfishService_8h.tex  redfish_8h.tex  redpath_8h.tex  refman.tex  resource_8h.tex  structEventActorState.tex  structEventCallbackRegister.tex  structEventInfo.tex  structEventWorkItem.tex  structMemoryStruct.tex  structSSEStruct.tex  structSSEThreadData.tex  structTCPThreadData.tex  struct__asyncHttpRequest.tex  struct__asyncHttpResponse.tex  struct__httpHeader.tex  struct__queue.tex  struct__queue__node.tex  struct__redPathNode.tex  struct__redfishService.tex  structasyncToSyncContext.tex  structasyncWorkItem.tex  structcreateServiceSessionAuthAsyncContext.tex  structenumeratorAuthentication.tex  structgetVersionsContext.tex  structrawAsyncCallbackContextWrapper.tex  (+6 more)
examples/: cli.c  destroy.c  test.c  testAsync.c
httpd/: cgi.c
include/: redfish.h  redfishEvent.h  redfishPayload.h  redfishRawAsync.h  redfishService.h  redpath.h
include/entities/: chassis.h  resource.h
rpm/: libredfish.spec
src/: asyncEvent.c  asyncEvent.h  asyncRaw.c  debug.h  internal_service.h  main.c  payload.c  queue.c  queue.h  redpath.c  service.c  util.c  util.h
src/entities/: chassis.c  resource.c
